Make UppaalProxy properly handle missing files